Make sure that hero text goes full width on small and medium screens

--- a/src/css/claiming.less
+++ b/src/css/claiming.less
@@ -683,8 +683,7 @@ form {
     display: none;
   }
 
-  #claiming-social-security .claiming-hero h1,
-  #claiming-social-security .claiming-hero p {
+  #claiming-social-security .claiming-hero .hero_text {
     width: 100%;
   }
 
